--- a/literature.bib
+++ b/literature.bib
@@ -58210,7 +58210,7 @@ African Linguistics",
 
 @article{hay2005shifting,
 	title="Shifting paradigms: gradient structure in morphology.",
-	author="Jennifer B. {Hay} and R. Harald {Baayen}",
+	author="Jennifer {Hay} and R. Harald {Baayen}",
 	journal="Trends in Cognitive Sciences",
 	volume="9",
 	number="7",
@@ -58377,5 +58377,16 @@ pages={1707--1713}}
 	year="2010"
 }
 
+
+@incollection{wals-20,
+  address   = {Leipzig},
+  author    = {Balthasar Bickel and Johanna Nichols},
+  booktitle = {The World Atlas of Language Structures Online},
+  editor    = {Matthew S. Dryer and Martin Haspelmath},
+  publisher = {Max Planck Institute for Evolutionary Anthropology},
+  title     = {Fusion of Selected Inflectional Formatives},
+  url       = {https://wals.info/chapter/20},
+  year      = {2013}
+}
 
 
